--- a/index.html
+++ b/index.html
@@ -13,8 +13,17 @@
 
     <script>
         System.import( 'index' )
-            .then( function() {
+            .then( function( module ) {
                 console.log( 'Bootstrapped' );
+                var Tatty = module.default;
+
+                var tty = new Tatty( document.body, {
+                    cols: 48,
+                    rows: 12
+                });
+
+                tty.write( 'I ❤︎ Harmony' );
+                tty.write( tty.bufferSize );
             });
     </script>
 </body>
