--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
                 tty.writeln( 'this is a line' );
                 tty.writeln( 'here is another line' );
+
+                tty.prompt();
             });
     </script>
 </body>
