#add - write to cursor position

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     rows: 18
                 });
 
+                /*
                 tty.write( 'I ❤︎ Harmony' );
                 tty.write( tty.bufferSize );
 
@@ -35,6 +36,12 @@
                 tty.writeln( 'one two three' );
 
                 tty.prompt();
+                */
+
+                tty.write( 'hello' );
+                tty.write( ' world' );
+                console.log( tty.cursor );
+
             });
     </script>
 </body>
