#add - inserting lines

--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
                 tty.prompt();
                 */
 
-                tty.write( 'hello' );
-                tty.write( ' world' );
+                tty.writeln( 'hello' );
+                tty.writeln( ' world' );
+                tty.writeln( 'again and again' );
                 console.log( tty.cursor );
 
             });
