--- a/index.html
+++ b/index.html
@@ -24,24 +24,24 @@
                 var Tatty = module.default;
 
                 window.tty = new Tatty( document.querySelector( '#tty' ), {
-                    cols: 60,
+                    cols: 20,
                     rows: 18
                 });
 
-                /*
-                tty.write( 'I ❤︎ Harmony' );
-                tty.write( tty.bufferSize );
 
-                tty.writeln( 'hello world' );
-                tty.writeln( 'one two three' );
-
-                tty.prompt();
-                */
+                tty.writeln( 'I ❤︎ Harmony' );
+                tty.writeln( 'cash bash sash hash' );
 
                 tty.writeln( 'hello' );
-                tty.writeln( ' world' );
+                tty.writeln( 'world' );
                 tty.writeln( 'again and again' );
-                console.log( tty.cursor );
+                tty.cursor.debug( 'cursor' );
+
+                tty.setCursor( 10, 1 );
+                tty.write( 'tree freeon weee area tune tone hone ' );
+
+                tty.cursor.debug( 'cursor' );
+                console.log( 'should be 5, 3' );
 
             });
     </script>
