--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         #tty {
             background: black;
             color: #00ff33;
+
+            font-size: 20px;
+            line-height: 24px;
         }
 
         #tty .cursor {
