#update - use monospace system font

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             background: black;
             color: #ccc;
 
-            font-family: 'Perfect DOS VGA 437';
-            font-size: 19px;
+            font-family: 'PC Senior';
+            font-size: 14px;
             line-height: 21px;
             letter-spacing: -1px;
         }
@@ -47,7 +47,7 @@
                     cols: 52,
                     rows: 18,
                     overlayOffset: 3,
-                    overlay: false
+                    overlay: true
                 });
 
 
