#add - allow printing beyond line length

--- a/index.html
+++ b/index.html
@@ -51,11 +51,18 @@
                 });
 
 
-                tty.writeln( 'I ❤︎ Harmony' );
-                tty.prompt();
-                tty.write( 'info' );
+                //tty.writeln( 'I ❤︎ Harmony' );
+                //tty.prompt();
+                //tty.write( 'info' );
                 tty.writeln( 'You are encouraged to share this program with other users.' );
                 tty.prompt();
+                tty.setCursor( 18,1 );
+                tty.write( 'Contra ' );
+                tty.write( 'Dextra' );
+                tty.write( ' Avenue.' );
+                tty.setCursor( 3, 2 );
+                tty.emit( 'showCursor', true );
+
 
 
                 document.addEventListener( 'keypress', function( event ) {
@@ -67,6 +74,12 @@
                     // Prevents backspace
                     if ( event.keyCode === 8 ) {
                         event.preventDefault();
+                        tty.del();
+                    }
+
+                    if ( event.keyCode === 13 ) {
+                        event.preventDefault();
+                        tty.prompt();
                     }
                 });
             });
