#add - writechar and putc

--- a/index.html
+++ b/index.html
@@ -67,17 +67,9 @@
                 ]);
 
 
-                //tty.writeln( 'I ❤︎ Harmony' );
-                //tty.prompt();
-                //tty.write( 'info' );
+                tty.writeln( 'I ❤︎ Harmony.' );
                 tty.writeln( 'You are encouraged to share this program with other users.' );
                 tty.prompt();
-                tty.setCursor( 18,1 );
-                tty.write( 'Contra ' );
-                tty.write( 'Dextra' );
-                tty.write( ' Avenue.' );
-                tty.setCursor( 3, 2 );
-                tty.emit( 'showCursor', true );
 
 
 
