#update - cursor positioning

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                 tty.write( '¢' );
 
                 for ( var x = 0; x < 20; x++ ) {
-                    tty.setCursor( (Math.random()*40) | 0, (Math.random()*23) | 0 );
-                    tty.write( '#' );
+                    //tty.setCursor( (Math.random()*40) | 0, (Math.random()*23) | 0 );
+                    //tty.write( '#' );
                 }
 
                 tty.writeln( '' );
