--- a/index.html
+++ b/index.html
@@ -35,14 +35,15 @@
     <script src="./dist/common/traceur-runtime.js"></script>
     <script src="./dist/common/es6-module-loader.js"></script>
     <script src="./dist/common/system.js"></script>
-    <script src="./dist/index.js"></script>
+    <script src="./dist/tatty-screen.js"></script>
 
     <script>
-        System.import( 'index' )
+        System.import( 'tatty-screen/tatty-screen' )
             .then( function( module ) {
                 console.log( 'Bootstrapped' );
                 var Tatty = module.default;
 
+                /*
                 window.tty = new Tatty( document.querySelector( '#tty' ), {
                     cols: 40,
                     rows: 25,
@@ -65,6 +66,13 @@
                         }
                     }
                 ]);
+                */
+
+                window.tty = new Tatty( document.querySelector( '#tty' ), {
+                    cols: 40,
+                    row: 25,
+                    scan: false
+                });
 
                 tty.writeln( 'I ❤︎ Harmony.' );
                 tty.writeln( 'You are encouraged to share this program with other users.' );
